# descriptor-limitations

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: aqsoldb_ceiling.py  chembl_herg_ceiling.py  doyle_ceiling.py  matbench_gap_ceiling.py  mpea_ceiling.py  polymer_tg_ceiling.py  sms_ceiling.py
scripts/: esol_fair_comparison.py
src/descriptor_limitations/: data_loaders.py  information.py
tests/: test_aqsoldb_loader.py  test_aqsoldb_notebook_smoke.py  test_data_loaders.py  test_doyle_notebook_smoke.py  test_information.py  test_matbench_smoke.py  test_mpea_loader.py  test_mpea_notebook_smoke.py  test_polymer_tg_notebook_smoke.py  test_polymetrix_loader.py  test_sms_loader.py  test_sms_notebook_smoke.py
